# create-project-calavera

./: .gitignore  .prettierignore  .stylelintrc.json  AGENTS.md  CHANGELOG.md  GOAL.md  MIGRATION.md  README.md  calavera.config.json  github-issue-triage-report.html  knip.json  oxlint.json  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  skills.sh.json  tsconfig.json  vite.config.js
.calavera/: state.json
.changeset/: README.md  calm-rabbits-review.md  clean-css-hosts.md  config.json  friendly-bones-check.md  quiet-bats-explore.md  quiet-spiders-validate.md  safe-dingos-compose.md  theos-varlock-integration.md  tidy-skulls-package.md  wise-ravens-lock.md
.github/workflows/: menu-bar-release.yml  npm-publish-github-packages.yml  publish.yml  release-pr.yml
apps/baseline-explorer/: README.md  (+2 more)
apps/menu-bar/src-tauri/: Cargo.toml  tauri.conf.json
apps/menu-bar/src-tauri/capabilities/: default.json
apps/menu-bar/src-tauri/src/: lib.rs  main.rs
docs/: agent-first-calavera-workflow.md  ai-adapter-guidance.md  ai-module-contract.md  claude-toolkit-merge-plan.md  contributing-calavera-integration-varlock.md  create-template-and-agent-composition.md  release-and-update-journey.md  release-rehearsal-record.md  vite-plus-and-delta-mode.md  vite-plus-template-research.md
scripts/: agent-bootstrap.test.mjs  check-artifact-contracts.test.mjs  check-config-schema.test.mjs  check-release-contracts.mjs  lint-skills.mjs  mcp-entrypoint.test.mjs
src/: catalog.js  index.js  mcp.js  recipe.js
web/: index.html  script.js  styles.css
(+64 files in other folders)
