[package]
name = "calavera-menu-bar"
version = "0.1.0"
description = "Read-only Calavera project update notifier"
authors = ["Schalk Neethling"]
edition = "2021"

[lib]
name = "calavera_menu_bar_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-notification = "2"
